tests/NormalTests/paczka1/small_fuzzy/23684966.err
Error in line 4: uv9Zv A344 18,5
Error in line 10: yJf8xomfD S276 65,9
Error in line 12: yJf8xomfD S888 49,4
